# vox-gate

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  docker-compose.yml  lessons.md  pyproject.toml  server.py
.claude/: settings.json
.claude/agents/: code-reviewer.md  verify-app.md
.claude/commands/: build-and-test.md  commit-push-pr.md  review.md  setup-statusline.md
.claude/hooks/: post-edit.sh
.claude/rules/: accessibility.md  code-quality.md  dev-stack.md  security.md
.claude/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
auth/: __init__.py  providers.py  routes.py  session.py
deploy/caddy/: .env.example  Caddyfile  README.md  docker-compose.yml
docs/: backend-contract.md  backends.md  contributing.md  integration.md  lessons.md  roadmap.md  security.md  setup.md
pwa/: app.js  auth.js  index.html  manifest.json  markdown.js  styles.css
tests/: test_server.py
